# audio_speex

./: README.md
SpeexOld/: build.gradle
speex/: README.md  build.gradle  proguard-rules.pro
speex/src/androidTest/java/com/cl/slack/speex/: ExampleInstrumentedTest.java
speex/src/main/: AndroidManifest.xml
speex/src/main/cpp/: CMakeLists.txt  speex_jni.cpp
speex/src/main/cpp/libspeex/: arch.h  bits.c  modes.c  modes_wb.c  speex.c  speex_callbacks.c  speex_header.c  stereo.c  testenc.c  testenc_uwb.c  testenc_wb.c
speex/src/main/java/com/cl/slack/speex/: JNILoader.java  MainActivity.java
speex/src/main/java/com/cl/slack/speex/recoder/: SpeexPlayer.java  SpeexRecorder.java
speex/src/main/java/com/cl/slack/speex/speex/: Speex.java  SpeexDecoder.java  SpeexEncoder.java
speex/src/main/java/com/cl/slack/speex/writer/: AudioFileWriter.java  OggCrc.java  OggSpeexWriter.java  SpeexWriteClient.java  SpeexWriter.java
speex/src/main/jni/: speex_jni.cpp
speex/src/main/jni/include/speex/: speex_config_types.h
speex/src/main/jni/libspeex/: arch.h  bits.c  modes.h  nb_celp.h  speex_callbacks.c  speex_header.c  stereo.c  testenc.c  testenc_uwb.c  testenc_wb.c  window.c
speex/src/main/res/layout/: activity_main.xml
speex/src/main/res/values/: strings.xml
speex/src/test/java/com/cl/slack/speex/: ExampleUnitTest.java
